[gd_scene load_steps=6 format=3 uid="uid://503n8qdfc87m"]

[ext_resource type="Texture2D" uid="uid://1u3b3hwqd8yh" path="res://art/tile_0110.png" id="1_4a83h"]
[ext_resource type="Script" uid="uid://ch5qijqgdoi13" path="res://scripts/enemy/enemy.gd" id="1_tjssy"]
[ext_resource type="Texture2D" uid="uid://bb3rcs5nqntir" path="res://art/arrow.png" id="2_40wdo"]
[ext_resource type="PackedScene" uid="uid://f45rjffmeout" path="res://scenes/ui/stats_ui.tscn" id="3_tjssy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pll4o"]
size = Vector2(16, 16)

[node name="EnemyArea" type="Area2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_tjssy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pll4o")

[node name="EnemyImage" type="Sprite2D" parent="."]
texture = ExtResource("1_4a83h")

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, 0)
rotation = -1.5708
texture = ExtResource("2_40wdo")

[node name="StatsUI" parent="." instance=ExtResource("3_tjssy")]
offset_top = 8.0
offset_bottom = 24.0

[connection signal="area_entered" from="." to="." method="_on_enemy_area_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_enemy_area_area_exited"]
